<resources>
    <string name="app_name">Медиа приложение</string>
    <string name="photos_button">Фото</string>
    <string name="video_button">Видео</string>
    <string name="audio_button">Аудио</string>
    <string name="gallery">📸 Галерея фото</string>
    <string name="photo_count">Фото 1 из 10</string>
    <string name="next_photo_button">Следующее фото</string>
    <string name="info_button">Информация</string>
    <string name="video_player">🎬 Видео-плеер</string>
    <string name="video_name">Демо видео</string>
    <string name="video_status">Готово к воспроизведению</string>
    <string name="start">Воспроизвести</string>
    <string name="pause">Пауза</string>
    <string name="stop_video">Стоп</string>
    <string name="audio_player">🎵 Аудио-плеер</string>
    <string name="audio_name">Название аудио-файла</string>
    <string name="duration">0:00 / 1:14</string>
    <string name="next_audio_button">Следующее аудио</string>
</resources>